# NLP_MSIA_2021

./: .gitignore  Makefile  README.md  app.py  pyproject.toml  run.py
data/submissions/: lg.csv
models/bow/: logistic.joblib  vectorizer.joblib
notebooks/: 00_eda.ipynb  01_bag_of_word.ipynb  02_fasttext.ipynb  03_transformers.ipynb  03_transformers_data.ipynb  04_transformers_model.ipynb  05_transformers_eval_explain.ipynb  06_share_transformer_models.ipynb
papers/: Sample_Model_Card.md
papers/latex/: acl_latex.tex  custom.bib
src/: evaluate.py  fasttext_utility.py  preprocess.py
