[tool.poetry]
name = "nlp_2021_project"
version = "1.0"
description = "manage dependencies for my nlp class project"
authors = ["Martin Pan"]

[tool.poetry.dependencies]
python = "^3.7.1"
pandas = "^1.3.0"
transformers = "4.12.5"
datasets = "1.15.1"
kaggle = "^1.5.12"
ipykernel = "^6.5.1"
matplotlib = "^3.5.0"
scikit-learn = "^1.0.1"
torch = "^1.10.0"
fasttext = "^0.9.2"
streamlit = "^1.2.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"
flake8 = "^3.9.2"
black = "^21.8b0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
